--- a/config.yaml
+++ b/config.yaml
@@ -5,3 +5,6 @@ branchs:
 - branch: release-1.13
   kube_version: v1.13.8
   docker_version: 18.06.3.ce-3
+  haproxy_version: 1.8.14
+  keepalived_version: 1.3.5
+  istio_version: 1.1.7
