--- a/config.yaml
+++ b/config.yaml
@@ -7,4 +7,8 @@ branchs:
   docker_version: 18.06.3.ce-3
   haproxy_version: 1.8.14
   keepalived_version: 1.3.5
+  metrics_server_version: 0.3.3
+  dashboard_version: 1.10.1
+  flannel_version: 0.11.0
   istio_version: 1.1.7
+
