--- a/config.yaml
+++ b/config.yaml
@@ -11,4 +11,9 @@ branchs:
   dashboard_version: 1.10.1
   flannel_version: 0.11.0
   istio_version: 1.1.7
-
+  consul_version: 0.9.4
+  mysql_version: 5.7
+  nats_version: 1.4.1
+  redis_version: 4.0.8
+  harbor_version: 1.5.1
+  auth_version: 0.5.1
