--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,19 @@
 branchs:
 - branch: release-1.11
-  kube_version: v1.11.10
-  docker_version: 1.13.1-96.gitb2f74b2.el7.centos.x86_64
+  #kube_version: v1.11.10
+  #docker_version: 1.13.1-96.gitb2f74b2.el7.centos.x86_64
+  kube_versoin: v1.11.8
+  docker_version: 1.13.1-91.git07f3374.el7.centos.x86_64
+  haproxy_version: 1.8.14
+  keepalived_version: 1.3.5
+  dashboard_version: 1.10.1
+  flannel_version: 0.11.0
+  consul_version: 0.9.4
+  mysql_version: 5.7
+  nats_version: 1.3.0
+  redis_version: 4.0.8
+  harbor_version: 1.5.1
+  auth_version: 0.5
 - branch: release-1.13
   kube_version: v1.13.8
   docker_version: 18.06.3.ce-3
