--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ branchs:
   
   # k8s 1.15  version
 - branch: release-1.15
-  kube_version: v1.15.3
+  kube_version: 1.15.3
   docker_version: 18.09.8
   haproxy_version: 1.8.14
   keepalived_version: 1.3.5
