--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,8 @@ branchs:
   #kube_version: v1.11.10
   #docker_version: 1.13.1-96.gitb2f74b2.el7.centos.x86_64
   kube_version: v1.11.8
-  docker_version: 1.13.1-91.git07f3374.el7.centos.x86_64
+  # docker_version: 1.13.1-91.git07f3374.el7.centos.x86_64
+  docker_version: 1.13.1-102.git7f2769b.el7.centos.x86_64
   haproxy_version: 1.8.14
   keepalived_version: 1.3.5
   dashboard_version: v1.10.1
