--- a/config.yaml
+++ b/config.yaml
@@ -54,7 +54,7 @@ branchs:
   haproxy_version: 1.8.14
   keepalived_version: 1.3.5
   dashboard_version: 1.10.1
-  flannel_version: 0.11.0
+  flannel_version: v0.11.0
   istio_version: 1.1.7
   consul_version: 0.9.4
   mysql_version: 5.7
