--- a/config.yaml
+++ b/config.yaml
@@ -48,6 +48,21 @@ branchs:
   harbor_version: 1.5.1
   auth_version: 0.5.1
 
+- branch: release-1.15-dev
+  kube_version: v1.15.4
+  docker_version: 18.09.8-3
+  haproxy_version: 1.8.14
+  keepalived_version: 1.3.5
+  calico_version: 3.8.2
+  flannel_version: v0.11.0
+  istio_version: 1.1.7
+  consul_version: 0.9.4
+  mysql_version: 5.7
+  nats_version: 1.4.1
+  redis_version: 4.0.8
+  harbor_version: 1.5.1
+  auth_version: 0.5.1
+
 - branch: release-1.15-cmft
   kube_version: v1.15.4
   docker_version: 18.09.8-3
