--- a/config.yaml
+++ b/config.yaml
@@ -38,6 +38,7 @@ branchs:
   docker_version: 18.09.8-3
   haproxy_version: 1.8.14
   keepalived_version: 1.3.5
+  calico_version: 3.8.2
   dashboard_version: v1.10.1
   flannel_version: v0.11.0
   istio_version: 1.1.7
